# ai-desktop-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  _replay_test.py  bootstrap.ps1  control_ui.py  desktop_action_verification_eval.py  hybrid_eval.py  index.html  lab_shell_eval.py  live_agent_eval.py  main.py  operator_intelligence_eval.py  requirements-dev.txt  requirements.txt  smoke_test.py  windows_open_eval.py  workflow_bridge_eval.py
.claude/: settings.local.json
_graveyard/: README.md  loop_v1.py
agents/: README.md  desktop_inspector.md  desktop_recovery_planner.md
automation/: next_step.json
config/: secrets.yaml  settings.yaml
core/: agent.py  alerts.py  backend_schemas.py  browser_tasks.py  capability_profiles.py  chat_sessions.py  command_registry.py  config.py  desktop_capture_service.py  desktop_evidence.py  desktop_mapping.py  desktop_matching.py  desktop_recovery.py  desktop_scene.py  desktop_targets.py  email_service.py  execution_manager.py  extension_registry.py  fast_path.py  file_watch_backend.py  lab_shell.py  llm_client.py  local_api.py  local_api_client.py  local_api_events.py  loop.py  operator_behavior.py  operator_controller.py  operator_intelligence.py  problem_records.py  run_history.py  safety.py  scheduler_backend.py  session_store.py  skill_registry.py  startup_profiler.py  state.py  tool_policy.py  tool_runtime.py  watchers.py  (+1 more)
desktop-ui/: .gitignore  index.html  package-lock.json  (+2 more)
desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
desktop-ui/src-tauri/capabilities/: default.json
desktop-ui/src-tauri/src/: main.rs
(+42 files in other folders)
