[package]
name = "ai_operator_desktop"
version = "0.1.0"
description = "Chat-first desktop shell for the local AI operator"
authors = ["Mattias"]
edition = "2021"

[package.metadata.tauri-winres]
ProductName = "AI Operator"
FileDescription = "Chat-first desktop shell for the local AI operator"
OriginalFilename = "ai_operator_desktop.exe"
LegalCopyright = "Copyright (c) Mattias"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
